--- a/src/Resources/views/storefront/element/cms-element-maps.html.twig
+++ b/src/Resources/views/storefront/element/cms-element-maps.html.twig
@@ -7,6 +7,7 @@
          data-description="{{ element.config.description.value }}"
          data-mapbox="{{ element.config.mapboxStyle.value }}"
          data-zoom="{{ element.config.zoom.value }}"
+         data-language="{{ element.config.language.value }}"
          data-token="{{ apitoken }}"
     >
     </div>
